@@ -1,4 +1,5 @@
 Version 0.3.7 ()
+- Rename files via UI (Issue #162)
 
 Version 0.3.6 (2019-10-08)
 - Update Ace Editor @emontnemery & @danielperna84
